data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_850.wast
;; 1. **Test Description:** Create a deeply nested structure with multiple `block`, `loop`, and `if` constructs. Use the `br` instruction intending to break to a high-level enclosing `block`. The test should check if the WebAssembly implementation properly interprets the label index and manages the operand stack correctly, whereas the wizard_engine might fail due to incorrect label argument handling.

(assert_invalid
  (module (func $incorrect-label-branch
    (block
      (block
        (block
          (br 3)  ;; attempting to break to a label that doesn't exist
        )
      )
    )
  ))
  "unknown label"
)